--- a/angular.json
+++ b/angular.json
@@ -68,10 +68,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "HeroesPrimeNG:build:production"
+              "buildTarget": "HeroesPrimeNG:build:production"
             },
             "development": {
-              "browserTarget": "HeroesPrimeNG:build:development"
+              "buildTarget": "HeroesPrimeNG:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -79,7 +79,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "HeroesPrimeNG:build"
+            "buildTarget": "HeroesPrimeNG:build"
           }
         },
         "test": {
