--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@angular/platform-browser": "^17.1.2",
     "@angular/platform-browser-dynamic": "^17.1.2",
     "@angular/router": "^17.1.2",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
+    "primeicons": "^6.0.1",
+    "primeng": "^17.6.0",
+    "rxjs": "^7.4.0",
+    "tslib": "^2.6.2",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
